@@ -1,4 +1,3 @@
 {
-  "apiUrl": "http://127.0.0.1:5000/api",
-  "blocklist": {"twitter.com": {}, "finance.yahoo.com": {}, "*.google.com": {}}
+  "apiUrl": "http://127.0.0.1:5000/api"
 }
