@@ -149,103 +149,6 @@ describe('SidebarInjector', function () {
       });
     });
   });
-
-  describe("when there's a non-empty blocklist", function() {
-    it("still injects the scripts on unblocked sites", function() {
-      var promise = injector.injectIntoTab(
-        {id: 1, url: "http://notblocked.com"});
-      return promise.then(
-        function onFulfill() {
-          assert.called(fakeChromeTabs.executeScript);
-        },
-        function onRejected(reason) {
-          assert(false, "The promise should not be rejected");
-      });
-    });
-
-    it("still injects scripts on subdomains of blocked domains", function() {
-      var promise = injector.injectIntoTab(
-        {id: 1, url: "http://subdomain.twitter.com"});
-      return promise.then(
-        function onFulfill() {
-          assert.called(fakeChromeTabs.executeScript);
-        },
-        function onRejected(reason) {
-          assert(false, "The promise should not be rejected");
-      });
-    });
-
-    it("doesn't inject any scripts on blocked sites", function() {
-      var promise = injector.injectIntoTab({id: 1, url: "http://twitter.com"});
-      return promise.then(
-        function onFulfill() {
-          assert(false, "The promise should not be fulfilled");
-        },
-        function onRejected(reason) {
-          assert.notCalled(fakeChromeTabs.executeScript);
-      });
-    });
-
-    it("doesn't inject scripts on sub pages of blocked sites", function() {
-      var promise = injector.injectIntoTab(
-        {id: 1, url: "http://twitter.com/sub/page.html"});
-      return promise.then(
-        function onFulfill() {
-          assert(false, "The promise should not be fulfilled");
-        },
-        function onRejected(reason) {
-          assert.notCalled(fakeChromeTabs.executeScript);
-      });
-    });
-
-    it("doesn't inject scripts on blocked sites with queries", function() {
-      var promise = injector.injectIntoTab(
-        {id: 1, url: "http://twitter.com?tag=foo&user=bar"});
-      return promise.then(
-        function onFulfill() {
-          assert(false, "The promise should not be fulfilled");
-        },
-        function onRejected(reason) {
-          assert.notCalled(fakeChromeTabs.executeScript);
-      });
-    });
-
-    it("doesn't inject scripts on blocked sites with anchors", function() {
-      var promise = injector.injectIntoTab(
-        {id: 1, url: "http://twitter.com#foo"});
-      return promise.then(
-        function onFulfill() {
-          assert(false, "The promise should not be fulfilled");
-        },
-        function onRejected(reason) {
-          assert.notCalled(fakeChromeTabs.executeScript);
-      });
-    });
-
-    it("doesn't inject scripts on blocked sites with ports", function() {
-      var promise = injector.injectIntoTab(
-        {id: 1, url: "http://twitter.com:1234"});
-      return promise.then(
-        function onFulfill() {
-          assert(false, "The promise should not be fulfilled");
-        },
-        function onRejected(reason) {
-          assert.notCalled(fakeChromeTabs.executeScript);
-      });
-    });
-
-    it("doesn't inject on wildcard-blocked subdomains", function() {
-      var promise = injector.injectIntoTab(
-        {id: 1, url: "http://drive.google.com"});
-      return promise.then(
-        function onFulfill() {
-          assert(false, "The promise should not be fulfilled");
-        },
-        function onRejected(reason) {
-          assert.notCalled(fakeChromeTabs.executeScript);
-      });
-    });
-  });
 });
 
   describe('.removeFromTab', function () {
