@@ -6,10 +6,6 @@ if (typeof(window.annotator) === 'undefined') {
     return;
 }
 
-{% if blocklist -%}
-{% include 'h:static/scripts/blocklist.js' %}
-{%- endif %}
-
 // Injects the hypothesis dependencies. These can be either js or css, the
 // file extension is used to determine the loading method. This file is
 // pre-processed in order to insert the wgxpath, url and inject scripts.
@@ -52,18 +48,6 @@ window.hypothesisInstall = function (inject) {
 
     document.head.appendChild(script);
   };
-
-  {% if blocklist %}
-    // For certain blocklisted hostnames we bail out and don't inject
-    // Hypothesis.
-    var url = window.location.toString();
-    if (blocklist.isBlocked(url, {{ blocklist|safe }})) {
-      window.alert(
-        "We're sorry, but Hypothesis doesn't work on " +
-        window.location.hostname + " yet.");
-      return;
-    }
-  {% endif %}
 
   if (!window.document.evaluate) {
     {%- assets "wgxpath" %}
