@@ -92,7 +92,6 @@ def embed(context, request):
     request.response.content_type = b'text/javascript'
     return {
         'app_config': app_config(request),
-        'blocklist': json.dumps(request.registry.settings['h.blocklist'])
     }
 
 
@@ -154,32 +153,6 @@ def notfound(context, request):
     return {}
 
 
-def _validate_blocklist(config):
-    """Validate the "h.blocklist" config file setting.
-
-    h.blocklist in the config file should be a JSON object as a string, for
-    example:
-
-        h.blocklist = {
-          "www.quirksmode.org": {},
-          "finance.yahoo.com": {}
-        }
-
-    This function replaces the string value on registry.settings with a dict.
-    It inserts a default value ({}) if there's nothing in the config file.
-
-    :raises RuntimeError: if the value in the config file is invalid
-
-    """
-    try:
-        config.registry.settings['h.blocklist'] = json.loads(
-            config.registry.settings.get('h.blocklist', '{}'))
-    except ValueError as err:
-        raise ValueError(
-            "The h.blocklist setting in the config file is invalid: " +
-            str(err))
-
-
 def includeme(config):
     config.include('h.assets')
 
@@ -192,7 +165,5 @@ def includeme(config):
 
     config.add_route('session', '/app')
     config.add_route('stream', '/stream')
-
-    _validate_blocklist(config)
 
     config.scan(__name__)
